--- a/src/main/resources/templates/pages/employee-dashboard-legal.html
+++ b/src/main/resources/templates/pages/employee-dashboard-legal.html
@@ -48,10 +48,22 @@
     #popup.show{
         display: block;
     }
+
+    #uitloggen {
+        position:absolute;
+        top:0;
+        right:0;
+        margin-right:-800px;
+    }
+
 </style>
 
     <h1>Welkom, <span th:text="${employee.firstName}"></span></h1>
     <br>
+
+    <div class="col-md-4">
+        <a id="uitloggen" th:href="@{/loginemployee}" class="btn btn-primary" type="submit">Uitloggen</a>
+    </div>
 
     <div class="container my-2">
         <h3>10 klanten met hoogste saldo</h3>
@@ -64,10 +76,10 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="account : ${legalAccounts}" class="client-row" th:attr="onclick='showMoreInfo(\'' + ${account.getAccountHolderNames()}+ '\');'" >
-                <td th:text="${account.getAccountHolderNames()}" ></td>
-                <td th:text="${account.iban}"></td>
-                <td th:text="${account.balance}"></td>
+            <tr th:each="lp : ${lpWithHighestBalance}" class="client-row" th:attr="onclick='showMoreInfo(\'' + ${lp.companyName}+ '\');'" >
+                <td th:text="${lp.companyName}" ></td>
+                <td th:text="${lp.iban}"></td>
+                <td th:text="${lp.balance}"></td>
             </tr>
             </tbody>
         </table>
@@ -123,7 +135,7 @@
          document.getElementById("account").innerHTML=iban;
         elementPopup.classList.add("show");
         elementOverlay.classList.add("show");
-        console.log("SHow info van account: ", iban)
+        console.log("Show info van account: ", iban)
     }
     function hideMoreInfo(){
         let elementPopup = document.getElementById("popup");
