--- a/src/main/resources/templates/pages/do-transaction.html
+++ b/src/main/resources/templates/pages/do-transaction.html
@@ -7,21 +7,39 @@
 </head>
 <body>
     <h1>Geld overmaken naar een andere rekening</h1>
-    <form action="#" method="post" th:action="@{/do_transaction}" th:object="${transaction}">
-    <label>Selecteer rekening:</label>
-        <ul th:object="${customerWithAccountOverview}">
-            <li th:each="account : ${customerWithAccountOverview.getAccountList()}" th:text="${account.iban}"></li>
-        </ul>
+    <form action="#" method="post" th:action="@{/do-transaction/}" th:object="${transactionDTO}">
+
+        <div class="col-md-6 form-group">
+            <label for="rekening">Rekening</label>
+            <select class="form-control" id="rekening" name="debitAccount"
+                    th:required="true">
+                <option value="">Selecteer uw rekening</option>
+                <option th:each="account : ${customerWithAccountOverview.getAccountList()}"
+                        th:text="${account.iban + ' € ' + account.balance}" th:value="${account.iban}">
+            </select>
+            <div class="invalid-feedback"></div>
+        </div>
+
+        <div class="col-md-6 form-group">
+        <label>Op naam van: (dit moet worden ingeladen obv de rekening die geselecteerd is)</label>
+            <span th:each="account : ${customerWithAccountOverview.getAccountList()}">
+            <ul>
+                <li th:each="customerName : ${account.getAccountHolderNames()}" th:text="${customerName}"></li>
+            </ul>
+                </span>
+            <input type="hidden" class="form-control" name="nameDebitCustomer" th:value="${nameCurrentCus}">
+        </div>
 
         <div class="col-md-6 form-group">
         <i class="fa fa-user icon"></i>
         <label>Bedrag</label>
-        <input type="text" class="form-control" name="amount" required>
+            <input type="text" class="form-control" name="amount" required>
     </div>
+
     <div class="col-md-6 form-group">
         <i class="fa fa-key icon"></i>
         <label>Naam ontvanger</label>
-        <input type="text" class="form-control" name="nameReceiver" required>
+        <input type="text" class="form-control" name="nameCreditCustomer" required>
     </div>
         <div class="col-md-6 form-group">
             <i class="fa fa-key icon"></i>
