medewerker inlog features

--- a/src/main/resources/templates/pages/employee-dashboard-legal.html
+++ b/src/main/resources/templates/pages/employee-dashboard-legal.html
@@ -73,6 +73,7 @@
                 <th>Klant</th>
                 <th>Iban</th>
                 <th>Saldo</th>
+                <th>Accountmanager</th>
             </tr>
             </thead>
             <tbody>
@@ -80,6 +81,7 @@
                 <td th:text="${lp.companyName}" ></td>
                 <td th:text="${lp.iban}"></td>
                 <td th:text="${lp.balance}"></td>
+                <td th:text="${lp.accountmanager}"></td>
             </tr>
             </tbody>
         </table>
