--- a/src/main/resources/templates/pages/do-transaction.html
+++ b/src/main/resources/templates/pages/do-transaction.html
@@ -6,8 +6,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <body>
-    <h1>Geld overmaken naar een andere rekening</h1>
-    <form action="#" method="post" th:action="@{/do-transaction/}" th:object="${transactionDTO}">
+<div class="container-my-2">
+    <div class="row">
+        <div class="col-md-8 mx-auto">
+        <h1>Geld overmaken naar een andere rekening</h1>
+        <form action="#" method="post" th:action="@{/do-transaction/}" th:object="${transactionDTO}">
 
         <div class="col-md-6 form-group">
             <label for="rekening">Rekening</label>
@@ -22,11 +25,6 @@
 
         <div class="col-md-6 form-group">
         <label>Op naam van: (dit moet worden ingeladen obv de rekening die geselecteerd is)</label>
-            <span th:each="account : ${customerWithAccountOverview.getAccountList()}">
-            <ul>
-                <li th:each="customerName : ${account.getAccountHolderNames()}" th:text="${customerName}"></li>
-            </ul>
-                </span>
             <input type="hidden" class="form-control" name="nameDebitCustomer" th:value="${nameCurrentCus}">
         </div>
 
@@ -51,11 +49,6 @@
             <label>Omschrijving</label>
             <input type="text" class="form-control" name="description" required>
         </div>
-        <div class="col-md-6 form-group">
-            <i class="fa fa-key icon"></i>
-            <label>Wanneer</label>
-            <input type="text" class="form-control" name="date" required>
-        </div>
     <div class="col-md-4">
         <input type="submit" class="btn btn-primary" value="Verder">
     </div>
@@ -65,5 +58,8 @@
             <input type="submit" class="btn btn-primary" value="Terug">
         </div>
     </form>
+        </div>
+    </div>
+</div>
 </body>
 </html>
