--- a/src/main/resources/templates/pages/transaction-confirmation.html
+++ b/src/main/resources/templates/pages/transaction-confirmation.html
@@ -7,18 +7,6 @@
 </head>
 <body>
 
-<style>
-    #uitloggen {
-        position:absolute;
-        top:0;
-        right:0;
-        margin-right:-800px;
-    }
-</style>
-<div class="col-md-4">
-    <a id="uitloggen" th:href="@{/}" class="btn btn-secondary" type="submit">Uitloggen</a>
-</div>
-
 <div class="container my-3">
     <h3>Bevestig uw overboeking</h3>
     <form action="#" method="post" th:action="@{/transaction-confirmed/}" th:object="${transactionConfirmedDTO}">
@@ -68,7 +56,7 @@
     <br>
     <form action="#" method="get" th:action="@{/do-transaction/}">
         <div class="col-md-4">
-            <input type="submit" class="btn btn-secondary" value="Terug">
+            <input type="submit" class="btn btn-outline-secondary" value="Terug">
         </div>
     </form>
 </div>
