--- a/src/main/resources/templates/pages/home.html
+++ b/src/main/resources/templates/pages/home.html
@@ -4,7 +4,7 @@
 <body>
 <div class="container-fluid min-vh-100" id="page">
     <div id="header" class="row header-default">
-        <header th:replace="fragments/header :: header-default"></header>
+        <header th:replace="fragments/header :: header-home"></header>
     </div>
     <div id="main-content" class="row">
         <main role="main" class="min-vw-100">
