--- a/src/main/resources/templates/pages/open-account.html
+++ b/src/main/resources/templates/pages/open-account.html
@@ -6,68 +6,74 @@
 <meta charset="UTF-8">
 <head>
     <title>Rekening openen</title>
-    <script>
-
-        function random() {
-            let country_code = "NL"
-            let bank_code = "DROVN";
-            let IBAN = "";
-            let string_length = 11;
-            let characters = "0123456789";
-            for (let i = 0; i < string_length; i++) {
-                IBAN += characters.charAt(Math.floor(Math.random() * characters.length));
-            }
-            let first_part = IBAN.substring(0,2)
-            let final_IBAN = IBAN.substring(0,9);
-
-            return document.ibanForm.ibanGenerator.value = country_code + first_part + bank_code + final_IBAN;
-            }
-
-
-            function ibanButton() {
-                document.addEventListener("click", random());
-                disableButton();
-            }
-
-            function disableButton(){
-                document.querySelector(`#ibanButtonClicked`).disabled = true;
-            }
-
-            function submitButton(){
-                alert("Uw nieuwe rekening is toegevoegd");
-            }
-
-        let popupWindow = null;
-        function centeredPopup(url,winName,w,h,scroll){
-            LeftPosition = (screen.width) ? (screen.width-w)/2 : 0;
-            TopPosition = (screen.height) ? (screen.height-h)/2 : 0;
-            settings =
-                'height='+h+',width='+w+',top='+TopPosition+',left='+LeftPosition+',scrollbars='+scroll+',resizable'
-            popupWindow = window.open(url,winName,settings)
-        }
-
-        function checkAvailabilityIban(form) {
-            accountID = $("#accountID").val();
-            iban = $("#ibanGenerator").val();
-            url = "[[@{'/openaccount/check_iban'}]]"
-
-            params = {id: accountID, iban: iban};
-
-            $.post(url, params, function (response) {
-                alert(response);
-
-            }).fail(function(){
-                alert("Error connecting to server");
-            });
-            return false;
-        }
-    </script>
 </head>
 <body>
-<div class="container-fluid min-vh-100" id="page">
-    <div id="header" class="row header-default">
-        <header th:replace="fragments/header :: header-default"></header>
-    </div>
+<script>
+
+    function random() {
+        let country_code = "NL"
+        let bank_code = "DROVN";
+        let IBAN = "";
+        let string_length = 11;
+        let characters = "0123456789";
+        for (let i = 0; i < string_length; i++) {
+            IBAN += characters.charAt(Math.floor(Math.random() * characters.length));
+        }
+        let first_part = IBAN.substring(0, 2)
+        let final_IBAN = IBAN.substring(0, 9);
+
+        return document.ibanForm.ibanGenerator.value = country_code + first_part + bank_code + final_IBAN;
+    }
+
+    const myHeaders = new Headers();
+    myHeaders.append("Content-Type", "application/x-www-form-urlencoded");
+
+    const urlencoded = new URLSearchParams();
+    urlencoded.append("ibanGenerator", "NLDROVN43280240231");
+
+    const requestOptions = {
+        method: 'POST',
+        headers: myHeaders,
+        body: urlencoded,
+        redirect: 'follow'
+    };
+
+    function checkUniqueIban() {
+        let element = document.querySelector("#ibanGenerator");
+        element.classList.add("show");
+
+        fetch("http://localhost:8080/saveaccount")
+            .then(function (response) {
+                return response.json()
+            }).then(function (data) {
+            console.log(data)
+        })
+    }
+
+    let popupWindow = null;
+
+    function centeredPopup(url, winName, w, h, scroll) {
+        LeftPosition = (screen.width) ? (screen.width - w) / 2 : 0;
+        TopPosition = (screen.height) ? (screen.height - h) / 2 : 0;
+        settings =
+            'height=' + h + ',width=' + w + ',top=' + TopPosition + ',left=' + LeftPosition + ',scrollbars=' + scroll + ',resizable'
+        popupWindow = window.open(url, winName, settings);
+
+    }
+
+    function ibanButton() {
+        document.addEventListener("click", random());
+        disableButton();
+    }
+
+    function disableButton() {
+        document.getElementById("ibanButtonClicked").style.visibility="hidden";
+    }
+
+
+    document.getElementById('ibanGenerator').addEventListener('focusout', checkUniqueIban)
+
+</script>
 <div class="container">
     <h1> Bankrekening openen</h1>
     <hr>
@@ -78,13 +84,14 @@
         <dt class="col-sm-3">Rekeninghouder</dt>
         <dd class="col-sm-9" th:text="${nameCurrentCus}" id="name" name="name" readonly></dd>
     </dl>
-    <form action="/saveaccount" method="post" name="ibanForm" onsubmit="return checkAvailabilityIban(this)">
-        <input type="text" th:field="*{customer.customerID}"  value="customer.customerID" hidden/>
-        <input type="text" th:field="*{account.accountID}" name="accountID" value="account.accountID" hidden/>
+    <form action="/saveaccount" method="post" name="ibanForm">
+        <input type="text" th:field="*{customer.customerID}" value="customer.customerID" hidden/>
+
         <div class="form-group">
             <label for="ibanGenerator"></label>
-            <input type="text" th:field="*{account.iban}" id="ibanGenerator" value="" placeholder="IBAN"/>
-            <input type="button" class="btn btn-primary" value="Uw nieuwe rekeningnummer" id="ibanButtonClicked" onclick="ibanButton()"/>
+            <input type="text" th:field="*{account.iban}" id="ibanGenerator" value="" placeholder="IBAN" required/>
+            <input type="button" class="btn btn-primary" value="Uw nieuwe rekeningnummer" id="ibanButtonClicked"
+                   onclick="ibanButton()"/>
         </div>
         <div class="form-group">
             <label for="balance">Uw huidige saldo:</label>
@@ -93,21 +100,25 @@
         </div>
         <div class="form-group form-check">
             <label class="form-check-label">
-                <p><a href="https://www.termsandconditionsgenerator.com/live.php?token=WMGxy8SYoQkOH2QDFKuWdAqUeZ9mgMuS" onclick="centeredPopup(this.href,'myWindow','700','300','yes');return false">Algemene voorwaarden</a></p>
+                <p><a href="https://www.termsandconditionsgenerator.com/live.php?token=WMGxy8SYoQkOH2QDFKuWdAqUeZ9mgMuS"
+                      onclick="centeredPopup(this.href,'myWindow','700','300','yes');return false">Algemene
+                    voorwaarden</a></p>
                 <input class="form-check-input" type="checkbox" name="remember" required> Ik ga akkoord met de
                 voorwaarden
                 <div class="valid-feedback">Valid.</div>
                 <div class="invalid-feedback">Graag aanvinken als u door zou willen gaan</div>
             </label>
         </div>
-        <button type="submit" id="submit" class="btn btn-primary" onclick="submitButton()">Bevestig</button>
-    </form>
-    <form action="#" method="get" th:action="@{/customer-with-accounts}">
-        <div class="col-md-4">
-            <input type="submit" class="btn btn-primary" value="Annuleren">
+        <div class="button-group">
+            <button type="submit" id="submit" class="btn btn-primary" onclick="submitButton()">Bevestigen</button>
         </div>
     </form>
-</div>
+        <form action="#" method="get" th:action="@{/customer-with-accounts}">
+            <input type="submit" class="btn btn-primary" value="Annuleren">
+        </form>
+    </div>
+<div class="row footer-default" id="footer">
+    <footer th:replace="fragments/footer :: footer-default"></footer>
 </div>
 </body>
 </html>
