gewerkt aan Transactie opslaan (nog niet af)

--- a/src/main/resources/templates/pages/transaction-confirmation.html
+++ b/src/main/resources/templates/pages/transaction-confirmation.html
@@ -14,7 +14,7 @@
         <div class="col-md-6 form-group">
             <label>Rekening </label>
             <label th:text="${transactionDTO.getDebitAccount()}">rekening</label>
-            <input type="hidden" class="form-control" name="debitAccount">
+            <input type="hidden" class="form-control" name="debitAccount" th:value="${transactionDTO.getDebitAccount()}">
             <div class="invalid-feedback"></div>
         </div>
 
@@ -28,26 +28,26 @@
             <i class="fa fa-user icon"></i>
             <label>Bedrag </label>
             <label th:text="${'€ ' + transactionDTO.getAmount()}">bedrag</label>
-            <input type="hidden" class="form-control" name="amount">
+            <input type="hidden" class="form-control" name="amount" th:value="${transactionDTO.getAmount()}">
         </div>
 
         <div class="col-md-6 form-group">
             <i class="fa fa-key icon"></i>
             <label>Naam ontvanger </label>
             <label th:text="${'€ ' + transactionDTO.getNameCreditCustomer()}">naam</label>
-            <input type="hidden" class="form-control" name="nameCreditCustomer">
+            <input type="hidden" class="form-control" name="nameCreditCustomer" th:value="${transactionDTO.getNameCreditCustomer()}">
         </div>
         <div class="col-md-6 form-group">
             <i class="fa fa-key icon"></i>
             <label>IBAN </label>
             <label th:text="${transactionDTO.getCreditAccount()}">creditAccount</label>
-            <input type="hidden" class="form-control" name="creditAccount">
+            <input type="hidden" class="form-control" name="creditAccount" th:value="${transactionDTO.getCreditAccount()}">
         </div>
         <div class="col-md-6 form-group">
             <i class="fa fa-key icon"></i>
             <label>Omschrijving </label>
             <label th:text="${transactionDTO.getDescription()}">description</label>
-            <input type="hidden" class="form-control" name="description">
+            <input type="hidden" class="form-control" name="description" th:value="${transactionDTO.getDescription()}">
         </div>
         <div class="col-md-4">
             <input type="submit" class="btn btn-primary" value="Bevestigen">
