--- a/src/main/resources/templates/pages/home.html
+++ b/src/main/resources/templates/pages/home.html
@@ -1,149 +1,74 @@
 <!DOCTYPE html>
-<html lang="nl" xmlns:th="http://www.thymeleaf.org">
+<html lang="nl" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
+<head th:replace="fragments/head :: head-default (pageTitle='Home', metaRobots='noindex, nofollow', metaDescription='', metaKeywords='')"></head>
 <body>
-<header class="header min-vw-100 navbar-light bg-light" id="header-main" th:fragment="header-home">
-    <div class="container pl-0 pr-0">
-        <nav class="navbar navbar-expand-lg">
-            <a class="navbar-brand" href="#">
-                <img src="/images/DROVN2.svg" width="150" height="150"
-                     class="d-inline-block align-top" alt="">
-
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item" th:classappend="${#httpServletRequest.getRequestURI() == '/' ? 'active':''}">
-                        <a class="nav-link" th:href="@{/}">Home</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownProducten" role="button"
-                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Producten
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownProducten">
-                            <a class="dropdown-item" href="#">Product 1</a>
-                            <a class="dropdown-item" href="#">Product 2</a>
-                            <a class="dropdown-item" href="#">Product 3</a>
-                            <a class="dropdown-item" href="#">Product 4</a>
-                        </div>
-                    </li>
-                    <li class="nav-item dropdown"
-                        th:classappend="| ${#httpServletRequest.getRequestURI() == '/registratie' ? 'active':''} ${#httpServletRequest.getRequestURI() == '/login' ? 'active':''} |">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownService" role="button"
-                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Service
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownService">
-                            <a class="dropdown-item"
-                               th:classappend="${#httpServletRequest.getRequestURI() == '/registreerparticulier' ? 'active':''}"
-                               href="/registreerparticulier">Klant worden - Particulier</a>
-                            <a class="dropdown-item"
-                               th:classappend="${#httpServletRequest.getRequestURI() == '/registreerzakelijk' ? 'active':''}"
-                               href="/registreerparticulier">Klant worden - Zakelijk</a>
-                            <a class="dropdown-item" href="#">Account aanmaken</a>
-                            <a class="dropdown-item" href="#">Rekening openen</a>
-                            <a class="dropdown-item"
-                               th:classappend="${#httpServletRequest.getRequestURI() == '/login' ? 'active':''}"
-                               href="/login">Inloggen</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Contact</a>
-                        </div>
-                    </li>
-                </ul>
-                <div class="container pl-0 pr-0">
-                    <div class="col-12 d-flex flex-row align-items-lg-end justify-content-lg-end">
-                        <a class="btn btn-primary mr-2" href="/registratie">Klant worden</a>
-                        <a class="btn btn-outline-primary mr-2" href="/login">Inloggen</a>
+<div class="container-fluid min-vh-100" id="page">
+    <div id="header" class="row header-home">
+        <header th:replace="fragments/header :: header-home"></header>
+    </div>
+    <div id="main-content" class="row">
+        <main role="main" class="min-vw-100">
+            <div class="jumbotron mb-5"
+                 style="filter: brightness(1.25); background: linear-gradient(65deg, rgba(0, 0, 0, 0.95), rgba(0, 0, 0, 0) ), url('/images/happy-online-banking.jpg'); background-position: left center; background-repeat: no-repeat; background-size: cover;">
+                <div class="container pt-5 pb-5 text-white">
+                    <h1><span class="display-5"><span class="text-blue">Online bank</span> | <span class="text-orange">Persoonlijke service</span></span>
+                    </h1>
+                    <p class="mb-0">Bij DROVN regel je al je financiële zaken gemakkelijk zelf online.</p>
+                    <p>Heb je liever persoonlijk contact? Dan staan onze service-medewerkers voor je klaar!</p>
+                    <p class="mt-5"><a class="btn btn-primary btn-lg" style="font-size: initial;" href="#"
+                                       role="button">Meer over service »</a></p>
+                </div>
+            </div>
+            <div class="container pt-5">
+                <div class="row">
+                    <div class="col-md-4">
+                        <h2>Heading</h2>
+                        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo,
+                            tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem
+                            malesuada magna mollis euismod. Donec sed odio dui. </p>
+                        <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+                    </div>
+                    <div class="col-md-4">
+                        <h2>Heading</h2>
+                        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo,
+                            tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem
+                            malesuada magna mollis euismod. Donec sed odio dui. </p>
+                        <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+                    </div>
+                    <div class="col-md-4">
+                        <h2>Heading</h2>
+                        <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum
+                            id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris
+                            condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+                        <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
                     </div>
                 </div>
-                <!--<form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>-->
             </div>
-        </nav>
+        </main>
     </div>
-</header>
-
-<header class="header" id="header-login" th:fragment="header-login">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">
-            <img src="https://getbootstrap.com//docs/4.5/assets/brand/bootstrap-solid.svg" width="30" height="30"
-                 class="d-inline-block align-top" alt="">
-            Bootstrap
-        </a>
-    </nav>
-</header>
-
-<header class="header min-vw-100 navbar-light bg-light" id="header-main" th:fragment="header-default">
-    <div class="container pl-0 pr-0">
-        <nav class="navbar navbar-expand-lg">
-            <a class="navbar-brand" href="#">
-                <img src="/images/DROVN2.svg" width="150" height="150"
-                     class="d-inline-block align-top" alt="">
-
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item" th:classappend="${#httpServletRequest.getRequestURI() == '/' ? 'active':''}">
-                        <a class="nav-link" th:href="@{/}">Home</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownProducten" role="button"
-                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Producten
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownProducten">
-                            <a class="dropdown-item" href="#">Product 1</a>
-                            <a class="dropdown-item" href="#">Product 2</a>
-                            <a class="dropdown-item" href="#">Product 3</a>
-                            <a class="dropdown-item" href="#">Product 4</a>
-                        </div>
-                    </li>
-                    <li class="nav-item dropdown"
-                        th:classappend="| ${#httpServletRequest.getRequestURI() == '/registratie' ? 'active':''} ${#httpServletRequest.getRequestURI() == '/login' ? 'active':''} |">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownService" role="button"
-                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Service
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownService">
-                            <a class="dropdown-item"
-                               th:classappend="${#httpServletRequest.getRequestURI() == '/registreerparticulier' ? 'active':''}"
-                               href="/registreerparticulier">Klant worden - Particulier</a>
-                            <a class="dropdown-item"
-                               th:classappend="${#httpServletRequest.getRequestURI() == '/registreerzakelijk' ? 'active':''}"
-                               href="/registreerparticulier">Klant worden - Zakelijk</a>
-                            <a class="dropdown-item" href="#">Account aanmaken</a>
-                            <a class="dropdown-item" href="#">Rekening openen</a>
-                            <a class="dropdown-item"
-                               th:classappend="${#httpServletRequest.getRequestURI() == '/login' ? 'active':''}"
-                               href="/login">Inloggen</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Contact</a>
-                        </div>
-                    </li>
-                </ul>
-                <div class="container pl-0 pr-0">
-                    <div class="col-12 d-flex flex-row align-items-lg-end justify-content-lg-end">
-                        <a class="btn btn-primary mr-2" href="/open-account">Rekening openen</a>
-                        <a class="btn btn-outline-primary mr-2" href="/">Uitloggen</a>
-                    </div>
-                </div>
-                <!--<form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>-->
+    <div id="footer" class="row footer-default">
+        <footer th:replace="fragments/footer :: footer-default"></footer>
+    </div>
+</div> <!-- /container - #page -->
+<div th:replace="fragments/scripts :: scripts-before-closing-tag"></div>
+<div id="modalNewAccount" class="modal" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Klantregistratie voltooid</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
             </div>
-        </nav>
+            <div class="modal-body">
+                <p>Hartelijk welkom als nieuwe klant van DROVN-Bank.</p>
+                <p>Vanaf nu kun je <a href="/login">inloggen</a> met je gebruikersnaam en wachtwoord.</p>
+            </div>
+        </div>
     </div>
-</header>
-
+</div>
+<script th:if="${accountCreated == 'true'}">
+    $('#modalNewAccount').modal();
+</script>
 </body>
 </html>
