--- a/src/main/resources/templates/pages/employee-dashboard-legal.html
+++ b/src/main/resources/templates/pages/employee-dashboard-legal.html
@@ -8,9 +8,11 @@
 </head>
 <body>
 <style>
-    .client-row:hover{
-        cursor:pointer;
+    #info {
+    .client-row:hover
+        cursor: pointer;
     }
+
     #black-screen{
         width: 100%;
         height: 100%;
@@ -25,12 +27,12 @@
         display: block;
     }
     #close{
-        position: absolute;
+        position: fixed;
         top: 15px;
         right: 15px;
         width: 15px;
         height: 15px;
-        background: red url("././static/images/close-512.png") center center no-repeat;
+        background: url('/images/close-512.png') center center no-repeat;
         background-size: 15px;
     }
     #popup{
@@ -41,7 +43,6 @@
         position: fixed;
         margin: -150px;
         background-color: #ffffff;
-        top: -150px;
         left: 50%;
         top: 50%;
     }
@@ -49,11 +50,11 @@
         display: block;
     }
 
-    #uitloggen {
+    #uitloggenemployee {
         position:absolute;
         top:0;
         right:0;
-        margin-right:-800px;
+        margin-right:-1000px;
     }
 
 </style>
@@ -129,12 +130,13 @@
         <div id="account"></div>
     </div>
 
-</body>
+<div th:replace="fragments/scripts :: scripts-before-closing-tag"></div>
+
 <script>
     function showMoreInfo(iban){
         let elementPopup = document.getElementById("popup");
         let elementOverlay = document.getElementById("black-screen");
-         document.getElementById("account").innerHTML=iban;
+        document.getElementById("meerinfo").innerHTML=iban;
         elementPopup.classList.add("show");
         elementOverlay.classList.add("show");
         console.log("Show info van account: ", iban)
