aanpassing link naar rekeningOpenen

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -122,7 +122,7 @@
                 </ul>
                 <div class="container pl-0 pr-0">
                     <div class="col-12 d-flex flex-row align-items-lg-end justify-content-lg-end">
-                        <a class="btn btn-primary mr-2" th:href="@{openaccount/{id}(id=${customer.customerID})}">Rekening Openen</a>
+                        <a class="btn btn-primary mr-2" th:href="@{openaccount}">Rekening Openen</a>
                         <a class="btn btn-outline-primary mr-2" href="/">Uitloggen</a>
                     </div>
                 </div>
