Account met dubbele naam opgelost voor Account_detail

--- a/src/main/resources/templates/pages/home.html
+++ b/src/main/resources/templates/pages/home.html
@@ -10,7 +10,11 @@
         <main role="main" class="min-vw-100">
             <div class="jumbotron mb-5"
                  style="filter: brightness(1.25); background: linear-gradient(65deg, rgba(0, 0, 0, 0.95), rgba(0, 0, 0, 0) ), url('/images/happy-online-banking.jpg'); background-position: left center; background-repeat: no-repeat; background-size: cover;">
+
                 <div class="container pt-5 pb-5 text-white">
+<!--                    <a>-->
+<!--                        <img src="/image/DROVN BANK_WHITE-04.svg" width="150" height="150">-->
+<!--                    </a>-->
                     <h1><span class="display-5"><span class="text-blue">Online bank</span> | <span class="text-orange">Persoonlijke service</span></span>
                     </h1>
                     <p class="mb-0">Bij DROVN regel je al je financiële zaken gemakkelijk zelf online.</p>
