--- a/src/main/resources/templates/pages/account_details.html
+++ b/src/main/resources/templates/pages/account_details.html
@@ -79,6 +79,7 @@
                             padding: 20px;
                         }
                     </style>
+
                     <table style="width: 100%; "  class="table-hover; container-fluid" data-sort-name="Date" data-sort-order="desc"
                            th:unless="${account.getTransactions().isEmpty()}"
                            th:object="${account}">
@@ -86,10 +87,10 @@
 
                         <tr style="font-size: 150%">
                             <th scope="col" style="width: 20%">Datum</th>
-                            <th scope="col" style="width: 20%">Tenaamstelling</th>
-                            <th scope="col" style="width: 25%">Tegenrekening</th>
-                            <th scope="col" style="width: 30%">Omschrijving</th>
-                            <th scope="col" style="width: 05%; text-align: right">Bedrag</th>
+                            <th scope="col" style="width: 25%">Tenaamstelling</th>
+                            <th scope="col" style="width: 20%">Tegenrekening</th>
+                            <th scope="col" style="width: 25%">Omschrijving</th>
+                            <th scope="col" style="width: 10%; text-align: right">Bedrag</th>
                         </tr>
 
 
@@ -98,8 +99,9 @@
                         <tbody>
                         <tr style="font-size: 150%" th:each="t : ${accountWithTransactionOverview.getTransactions}">
                             <td style="color: #312783" data-field="Date" data-sortable="true" th:text="${t.showDate}"></td>
-                            <td style="color: #312783">Tenaamstelling</td>
-                            <td style="color: #F39200" th:text="${t.showAccountName}"></td>
+<!--                            <td style="color: #312783"> <ul> <li th:each="nameContraCustomer : ${account.getAccountHolderNames()}" th:text="${nameContraCustomer}"></li></ul></td>-->
+                            <td style="color: #312783"><ul><li th:each="contraAccountName : ${account.getAccountHolderNames()}" th:text="${contraAccountName}"></ul></td>
+                            <td style="color: #F39200" th:text="${t.showContraAccount}"></td>
                             <td style="color: #312783" th:text="${t.description}"></td>
                             <td style="text-align: right"><span style="text-align: right; color: #312783" th:text="${t.showAmount}"></span></td>
                         </tr>
